--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -1,3 +1,20 @@
+.Cockpit button {
+    border: 2px solid cyan;
+    padding: 24px;
+    font: inherit;
+    background-color: whitesmoke;
+    cursor: pointer;
+    border-radius: 3px;
+  }
+  
+.Cockpit button:hover {
+    box-shadow: 1px 1px 3px cyan;
+}
+  
+.Cockpit button.Red {
+    background-color: red;
+}
+
 .Cockpit button.Bold {
     font-weight: bold;
 }
